# cicd-sample

./: .coverage  .env  .gitignore  Dockerfile  Jenkinsfile  README.md  bpims.code-workspace  coverage.xml  django.http  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt  sonar.properties
.sonar/: report-task.txt
insurance/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
insurance/migrations/: 0001_initial.py  0002_insurance_policy_owner.py  0003_modern.py  0004_modern_created_at_modern_updated_at.py  0005_delete_modern.py  0006_insurancegroupowner.py  0007_publication_article_delete_insurancegroupowner.py
kubernetes/: db.yml  deployment.yml  service.yml
products/: asgi.py  settings.py  urls.py  wsgi.py
