[project]
name = "bpims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=25.1.0",
    "pip>=26.0.1",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "coverage>=7.13.4",
    "pysonar>=1.3.0.4086",
]
